fix mobile overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,10 +19,13 @@
   }
 }
 
-body {
+
+html, body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 @keyframes blink {
